@@ -263,7 +263,12 @@ $i = 0;
             &nbsp;&nbsp;
             <input type="reset" tabindex="<?php $i++; print $i?>" value="<?php print $pgv_lang["reset"];?>" />
             &nbsp;&nbsp;
-			<INPUT TYPE="button" VALUE="<?php print $pgv_lang["lb_toAlbumPage"];?>" onclick="javascript:window.location='individual.php?pid=<?php echo $pid;?>&tab=<?php echo $tabno;?>&gedcom=<?php echo $GEDCOM;?>'" />
+			<?php if ($pid){ ?>
+				<INPUT TYPE="button" VALUE="<?php print $pgv_lang["lb_toAlbumPage"];?>" 		onclick="javascript:window.location='individual.php?pid=<?php echo $pid;?>&tab=<?php echo $tabno;?>&gedcom=<?php echo $GEDCOM;?>'" />
+			<?php }else{ ?>
+				<INPUT TYPE="button" VALUE="<?php print $pgv_lang["lb_toAdminConfigPage"];?>"	onclick="javascript:history.go(-1)" />
+			<?php } ?>
+			
 			</td>
 
     </tr>
